@@ -1,3 +1,4 @@
 __all__ = ['set_prompt',
            'set_timeout',
-           'send']
+           'send',
+           'wait_for']
